# pyAnomalyDetector

./: .gitignore  README.md  anomaly_detector.py  check_conn.py  default.yml  detect_anomalies.py  detector.py  main.py  notifier.py  pyproject.toml  reporter.py  requirements.txt  stats.py  trends_stats.py  update_topitems.py  viewer.py
classifiers/: __init__.py  dbscan.py
config/: default.yml
data_getter/: __init__.py  csv_getter.py  data_getter.py  logan_getter.py  sample_getter.py  zabbix_getter.py  zabbix_mysql_getter.py  zabbix_psql_getter.py
data_processing/: detector.py  history.py  processor.py.bk  stats.py  trends_stats.py
db/: mysql.py  postgresql.py
experiments/: __init__.py  classify_anomalies.py  csv_streamlit.py  logan_import.py  logan_streamlit.py  logan_streamlit_real.py  run_detect.py  update_anomalies.py  update_zabbix_dashboard.py
jupyter_notebook/: kmeans_history_plot.ipynb  plot.ipynb  plot_centroids.ipynb  plot_centroids2.ipynb  plot_csv_view.ipynb  plot_dbscan.ipynb  plot_dbscan_20250406.ipynb  plot_dbscan_20250407.ipynb  plot_dbscan_20250410.ipynb  plot_kmeans.ipynb  plot_kmeans2.ipynb  plot_optics.ipynb  plot_zabbix_20250406.ipynb  plot_zabbix_20250407.ipynb  plot_zabbix_20250410.ipynb
models/: anomalies.py  history.py  history_stats.py  model.py  models_set.py  recent_anomalies.py  sigmas.py  stats.py  trends_stats.py  updates.py
samples/: logan.yml  streamlit.yml  unified.yml  zabbix.yml  zabbix_mysql.yml  zabbix_psql.yml
scripts/: export_zabbix_data.sh  get_zabbix_data.sh  requirements.txt  run_daily_trends_stats.sh  setup.env  (+9 more)
(+119 files in other folders)
