[project]
name = "pyanomalydetector"
version = "0.1.0"
description = "Anomaly detection toolkit for time-series data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cython>=3.2.4",
    "debugpy>=1.8.20",
    "dotenv>=0.9.9",
    "fastdtw>=0.3.4",
    "flask>=3.1.3",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "mysql-connector-python>=9.6.0",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "plotly-express>=0.4.1",
    "psycopg2-binary>=2.9.11",
    "pyyaml>=6.0.3",
    "pyzabbix>=1.3.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "six>=1.17.0",
    "streamlit>=1.55.0",
]
